# gulpin

./: .clang-format  CMakeLists.txt  README.md
gulpin/: CMakeLists.txt
gulpin/include/gulpin/: IPlugin.h  PluginManager.h
gulpin/src/: PluginManager.cpp
sample-app/: CMakeLists.txt  Main.cpp
sample-app/plugins/: CMakeLists.txt  HelloWorldPlugin.cpp
